Draft for delete grant API
